Revision history for Perl extension Caecilia.

0.21
	- Fix undo/redo issues
0.20 Wed Dec 07 07:00:00
	- complete rewrite wit pEFL (Einlightenment foundation library)
0.19 Sun Jun 28 00:43:00
    - Move from Image::LibRSVG to Image::Magick
    - Minor design improvements in Breeze theme and settings dialog
0.18 Wed Aug 14 19:00:00
	- Some adoptions for compatibility with Windows
	- Caecilia::Preview improvement: Jump to note now also works with rests
	- Bugfix: Keep modified status as it was before jumping to/selecting the note in Caecilia::Editor
	- Make settings dialog smaller and scrollable
0.17 Sat Aug 10 09:40:00
	- Further improvement with the jump_to_note callback 
	  (the note is now selected in Caecilia::Editor instead that only the cursor jumps at the note)
	- some code cleaning
0.16 Sat Aug 10 09:00:00
	- Update of Makefile.PL
	- Improving of the click and jump to the note feature in Caecilia::Preview
	  (after clicking on a note the keyboard focus is set automatically to Caecilia::Editor)
0.15 Fr Aug 9 23:06:00
	- Many Bugfixes in Editor, Preview and the GUI
	- Add window icon
0.14 Wed Aug 7 08:34:00
	- Reimplementation of Editor (Syntax Highlighting and Line numbers) in Perl/Tcl::Tk
	- Solving compatibility problems of abcm2ps in Caecilia::Preview
0.13 Mo Aug 5 20:30:00 2019
	- Minor improvements with Syntax highlighting
0.12 Mo Jul 29 21:53:00 2019
	- Switch graphical toolkit to Tcl::Tk
0.11 Tue March 12 09:34:00 2019
	- Bugfix of Preview
0.10 Sat Jul 15 11:15:00 2017
	- Add abcm2ps options -F (formatfile), -D (directory for *.fmt) and -j (number measures every n bars)
	- Use core module IPC::open3 for capturing STDERR of the abm2ps command for use in the error dialog
0.09 Sat Jul 15 08:35:00 2017
	- Show the warn_unsaved dialog, even if user exits the application with unsaved content
	- Add options for abcm2ps in the Settings GUI
	- Add render dialog and Renderer-Module/Object